--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Noto+Sans+JP:wght@100..900&family=Wendy+One&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/_sass/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
     <header id="header"></header>
