--- a/about/index.html
+++ b/about/index.html
@@ -63,7 +63,7 @@
                     </li>
                     <li class="skill__list-item">
                         <div class="skill__list-item__left">コーディング</div>
-                        <div class="skill__list-item__right">HTML / CSS / Sass / jQuery等を使用した簡単なスライドショーやアニメーションの実装 / レスポンシブ対応</div>
+                        <div class="skill__list-item__right">HTML / CSS / Sass / jQueryプラグインを使用した簡単なスライドショー等の実装 / レスポンシブ対応</div>
                     </li>
                     <li class="skill__list-item">
                         <div class="skill__list-item__left">デザイン</div>
@@ -83,7 +83,7 @@
                     </li>
                     <li class="skill__list-item">
                         <div class="skill__list-item__left">その他</div>
-                        <div class="skill__list-item__right">Gitでのバージョン管理</div>
+                        <div class="skill__list-item__right">Gitでのバージョン管理（TortoiseGit使用）</div>
                     </li>
                 </ul>
             </div>
