About・Worksページ修正
資格追記
LINEスタンプの掲載

--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
                 </ul>
 
                 <h2 class="ttl__style01">■スキル</h2>
-                <ul class="skill__list">
+                <ul class="skill__list mb-90">
                     <li class="skill__list-item">
                         <div class="skill__list-item__left fw-bold">分野</div>
                         <div class="skill__list-item__right fw-bold">使用ツール・内容</div>
@@ -84,6 +84,30 @@
                     <li class="skill__list-item">
                         <div class="skill__list-item__left">その他</div>
                         <div class="skill__list-item__right">Gitでのバージョン管理（TortoiseGit使用）</div>
+                    </li>
+                </ul>
+
+                <h2 class="ttl__style01">■資格</h2>
+                <ul class="skill__list">
+                    <li class="skill__list-item">
+                        <div class="skill__list-item__left fw-bold">取得時期</div>
+                        <div class="skill__list-item__right fw-bold">資格</div>
+                    </li>
+                    <li class="skill__list-item">
+                        <div class="skill__list-item__left">2022年1月</div>
+                        <div class="skill__list-item__right">Photoshopクリエイター能力認定試験エキスパート</div>
+                    </li>
+                    <li class="skill__list-item">
+                        <div class="skill__list-item__left">2021年11月</div>
+                        <div class="skill__list-item__right">Illustratorクリエイター能力認定試験エキスパート</div>
+                    </li>
+                    <li class="skill__list-item">
+                        <div class="skill__list-item__left">2021年10月</div>
+                        <div class="skill__list-item__right">webクリエイター能力認定試験エキスパート</div>
+                    </li>
+                    <li class="skill__list-item">
+                        <div class="skill__list-item__left">2016年3月</div>
+                        <div class="skill__list-item__right">普通自動車運転免許</div>
                     </li>
                 </ul>
             </div>
