--- a/works/index.html
+++ b/works/index.html
@@ -37,12 +37,25 @@
 
                 <h2 class="ttl__style01">■キャラクターデザイン / イラスト制作</h2>
                 <p class="mb-30">一次創作を中心に活動しております。かわいらしい雰囲気のイラストが得意です。</p>
-                <div class="row">
+                <div class="row mb-90">
                     <div class="col-12 col-md-6 mb-md-30">
                         <img src="img/trombone.png" alt="">
                     </div>
                     <div class="col-12 col-md-6">
                         <img src="img/brave.png" alt="">
+                    </div>
+                </div>
+
+                <h2 class="ttl__style01">■LINEスタンプ制作</h2>
+                <p class="mb-30">イタリアの楽器マンドリンと、イタリアの動物たちをモチーフにしたLINEスタンプを2種作成しました。</p>
+                <div class="row">
+                    <div class="col-12 col-md-6 mb-md-30">
+                        <p class="fw-bold">第一弾</p>
+                        <img src="img/LINEstamp01.png" alt="">
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p class="fw-bold">第二弾</p>
+                        <img src="img/LINEstamp02.png" alt="">
                     </div>
                 </div>
             </div>
