--- a/about/index.html
+++ b/about/index.html
@@ -63,7 +63,7 @@
                     </li>
                     <li class="skill__list-item">
                         <div class="skill__list-item__left">コーディング</div>
-                        <div class="skill__list-item__right">HTML / CSS / Sass / jQueryプラグインを使用した簡単なスライドショー等の実装 / レスポンシブ対応</div>
+                        <div class="skill__list-item__right">HTML / CSS / Sass / Bootstrap / jQueryプラグインを使用した簡単なスライドショー等の実装 / レスポンシブ対応</div>
                     </li>
                     <li class="skill__list-item">
                         <div class="skill__list-item__left">デザイン</div>
