--- a/works/index.html
+++ b/works/index.html
@@ -48,7 +48,7 @@
 
                 <h2 class="ttl__style01">■LINEスタンプ制作</h2>
                 <p class="mb-30">イタリアの楽器マンドリンと、イタリアの動物たちをモチーフにしたLINEスタンプを2種作成しました。</p>
-                <div class="row">
+                <div class="row mb-90">
                     <div class="col-12 col-md-6 mb-md-30">
                         <p class="fw-bold">第一弾</p>
                         <img src="img/LINEstamp01.png" alt="">
@@ -58,6 +58,9 @@
                         <img src="img/LINEstamp02.png" alt="">
                     </div>
                 </div>
+
+                <h2 class="ttl__style01">■Webコーディング</h2>
+                <p class="mb-30">フリーランスで関わっていた案件に関しては契約の関係上、URL等の開示ができなくなっております。</p>
             </div>
         </section>
         
