--- a/works/index.html
+++ b/works/index.html
@@ -37,18 +37,12 @@
 
                 <h2 class="ttl__style01">■キャラクターデザイン / イラスト制作</h2>
                 <p class="mb-30">一次創作を中心に活動しております。かわいらしい雰囲気のイラストが得意です。</p>
-                <div class="row mb-30">
-                    <div class="col-12 col-md-6 mb-md-30">
+                <div class="row mb-90">
+                    <div class="col-12 col-md-5 mb-md-30">
                         <img src="img/trombone.png" alt="">
                     </div>
-                    <div class="col-12 col-md-6">
-                        <img src="img/brave.png" alt="">
-                    </div>
-                </div>
-                <div class="row mb-90">
-                    <div class="col-12">
-                        <p>▼2025年4月　<span class="fw-bold">制作中</span></p>
-                        <img src="img/brave03.png" alt="">
+                    <div class="col-12 col-md-7">
+                        <img src="img/yuusya.png" alt="">
                     </div>
                 </div>
 
