--- a/works/index.html
+++ b/works/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works | Risako Okamotoのポートフォリオサイト</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Noto+Sans+JP:wght@100..900&family=Wendy+One&family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/magnific-popup.css" />
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
@@ -39,10 +41,14 @@
                 <p class="mb-30">一次創作を中心に活動しております。かわいらしい雰囲気のイラストが得意です。</p>
                 <div class="row mb-90">
                     <div class="col-12 col-md-5 mb-md-30">
-                        <img src="img/trombone.png" alt="">
+                        <a href="img/trombone.png" class="popup-image">
+                            <img src="img/trombone.png" alt="">
+                        </a>
                     </div>
                     <div class="col-12 col-md-7">
-                        <img src="img/yuusya.png" alt="">
+                        <a href="img/yuusya.png" class="popup-image">
+                            <img src="img/yuusya.png" alt="">
+                        </a>
                     </div>
                 </div>
 
@@ -67,6 +73,7 @@
     </main>
     <footer id="footer"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="/js/jquery.magnific-popup.js"></script>
     <script src="/js/main.js"></script>
 </body>
 </html>
